Backend for filtering alarms by source and dest IP
